--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@azure/communication-calling": "^1.3.2-beta.1",
-    "@azure/communication-chat": "^1.1.0",
-    "@azure/communication-react": "1.0.1-beta.2",
+    "@azure/communication-react": "1.11.0-beta.1",
     "@microsoft/mgt": "^2.3.1",
     "@microsoft/mgt-element": "^2.3.1",
     "@microsoft/mgt-msal2-provider": "^2.3.1",
@@ -20,7 +18,7 @@
     "copyfiles": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
