--- a/server/package.json
+++ b/server/package.json
@@ -12,18 +12,18 @@
     "test": "echo 'no tests'"
   },
   "dependencies": {
-    "@azure/communication-common": "1.0.0",
-    "@azure/communication-identity": "1.0.0",
-    "@azure/communication-chat": "1.1.0",
+    "@azure/communication-chat": "1.4.0-beta.2",
+    "@azure/communication-common": "2.3.0",
+    "@azure/communication-identity": "1.3.0",
+    "@azure/core-http": "3.0.4",
     "@types/cors": "^2.8.8",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
+    "debug": "^2.6.9",
     "eslint-plugin-header": "^3.1.0",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "@azure/core-http": "1.2.4"
+    "express": "^4.18.2",
+    "http-errors": "^1.6.3",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -35,8 +35,6 @@
     "@types/node": "^14.14.10",
     "@types/supertest": "^2.0.10",
     "@types/webpack-node-externals": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^4.12.0",
     "copy-webpack-plugin": "^6.4.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.12.0",
@@ -55,7 +53,7 @@
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.0.0",
     "typescript": "4.3.5",
-    "webpack": "5.38.1",
+    "webpack": "^5.89.0",
     "webpack-cli": "4.7.2",
     "webpack-node-externals": "^2.5.2"
   }
